Began tutorial, and have added sample timeline text

--- a/collab.html
+++ b/collab.html
@@ -77,14 +77,15 @@
             <h2>Future Goals</h2>
             <a class="anchor" id="goals"></a>
             <hr>
-            <ul>
+            
             <h3>Improving Sensor Management for Users</h3>
             <p>One of the things we would like to improve on is administrator control. Right now, once an administrator has signed up to the website, the only thing he is able to do is add new sensors. Features we would like to include in the future include:</p>
+            <ul>
             <li>Editing existing sensors</li>
             <li>Deleting existing sensors</li>
             <li>Editing account settings</li>
             <li>Sorting list of sensors</li>
-            <li>Alerts for when parking bays have exceeded the allowed maximum stay</li><p></p>
+            <li>Alerts for when parking bays have exceeded the allowed maximum stay</li></ul>
             <p>Some of these things are quite simple to add, but we decided to push them out of our current scope, as they are unnecessary features. 
             Right now we can manually edit sensors behind the scene and edit account settings, so they were not required to present the use of our system.</p>
             <h3>Support for TCP connections</h3>
