--- a/dev.html
+++ b/dev.html
@@ -81,12 +81,32 @@
             </ul>
 
             <!-- Development Timeline -->
+            
             <h2>Development Timeline</h2>
             <a class="anchor" id="timeline"></a>
             <hr>
+            <h4>13-01-2015: <span style="font-weight: lighter">Moved to a Cassandra database backend</span></h4>
+            <p>Blah blah we made a big change thingy thingy the outcome was great. Outling hte change and why here.</p>
+            <p>Here are some reasons why:</p>
             <ul>
-              <li>Forks in prototypes, important decisions we made along the way and why...</li>
+              <li>Here's a reason why</li>
+              <li>Here's another reason</li>
             </ul>
+            <p>So yeah, that was a good idea on our part.</p>
+
+            <div class="subsection-divide"></div>
+
+            <h4>13-01-2015: <span style="font-weight: lighter">Moved to a Cassandra database backend</span></h4>
+            <p>Blah blah we made a big change thingy thingy the outcome was great. Outling hte change and why here.</p>
+            <p>Here are some reasons why:</p>
+            <ul>
+              <li>Here's a reason why</li>
+              <li>Here's another reason</li>
+            </ul>
+            <p>So yeah, that was a good idea on our part.</p>
+
+            <div class="subsection-divide"></div>
+
             
             <!-- References -->
             <h2>References</h2>
