--- a/docs.html
+++ b/docs.html
@@ -72,7 +72,7 @@
             </ul>
 
             <!-- Node.js API -->
-            <h2>Orange Sensors Web API</h2>
+            <h2>Web API</h2>
             <a class="anchor" id="webapi"></a>
             <hr>
             <ul>
@@ -81,16 +81,40 @@
             </ul>
 
             <!-- Java API -->
-            <h2>Orange Sensors Java API</h2>
+            <h2>Java API</h2>
             <a class="anchor" id="javaapi"></a>
             <hr>
+            <h4 style="font-weight: lighter">The Java API offers both public and authenticated access to all sensor data. If you're a user, this means you can restrict your queries to only sensors that belong to you. Here's all you need to get going with the API, and start using the data in your applications.</h4>
+            <h3>Download</h3>
+            <p>Before you do anything, make sure you download the API <a href="https://github.com/GulliverJ/OrangeSensorsJavaAPI">here</a>. All you really need is the orange-java-api.jar, but the source code is included should you wish to experiment for yourself.</p>
+
+            <h3>Getting Started</h3>
+            <p>Before you begin, you'll need to make sure you have some support for Maven installed. We're using Eclipse as a Java IDE, and downloads for Maven integration are <a href="https://maven.apache.org/eclipse-plugin.html">here</a>.</p>
+            <p>Once in Eclipse, we need to set up a simple Maven project. Press CTRL-N or right-click the Package Explorer before selecting "Other".</p>
+            <div class="imgborder">
+              <img class="img-responsive img-rounded" style="margin-left: auto; margin-right: auto" src="img/javatut_1.png">
+              <p>Create a new Maven project.</p>
+            </div>
+
+            <p>On the next screen, be sure to check 'Create a simple project'. Leave the other settings as they are, and click Next.</p>
+            <div class="imgborder">
+              <img class="img-responsive img-rounded" style="margin-left: auto; margin-right: auto" src="img/javatut_2.png">
+              <p>Create a simple project.</p>
+            </div>
+
+            <p>Next, set up the basic project details. Group ID and Artifact ID are the only fields required, so add these at a minimum and then click Finish.</p>
+            <div class="imgborder">
+              <img class="img-responsive img-rounded" style="margin-left: auto; margin-right: auto" src="img/javatut_3.png">
+              <p>Initialise the project details</p>
+            </div>
+
             <ul>
               <li>All documentation and guidelines for using the Java API</li>
               <li>Along with examples</li>
             </ul>
             
              <!-- Hardware -->
-            <h2>Orange Sensors Hardware</h2>
+            <h2>Hardware</h2>
             <a class="anchor" id="hardware"></a>
             <hr>
             <ul>
