added project coordinators

--- a/dev.html
+++ b/dev.html
@@ -68,13 +68,44 @@
             <hr>
             <div style="border-bottom: solid 1px silver; overflow: hidden;">
             <img class="img-rounded" align="right" hspace="50" src="img/johan2.jpg" >
+             <h3>Primary Developers</h3>
              <h4><span style="font-weight: lighter">Johan Mouritsen</span></h4>
              <p><b>Main Role:</b> Hardware Lead  </p>
              <p><b>Secondary Role:</b> Documentation and Testing</p>
              <p align="left"><b>Description:</b> I am a Danish Computer Science student at UCL, completing the 4 year MEng Computer Science program.
              I worked mainly on the hardware side of this project, while helping my team where I could on other sections. </p>
              </div>
-             
+             <h3>Project Coordinators</h3>
+             <div style="border-bottom: solid 1px silver; overflow: hidden;">
+             <h4><span style="font-weight: lighter">Graham Roberts</span></h4>
+             <p><b>Role:</b> Lecturer for Comp2013/2014 </p>
+             <p></p>
+             </div>
+             <div style="border-bottom: solid 1px silver; overflow: hidden;">
+             <h4><span style="font-weight: lighter">Dean Mohamedally</span></h4>
+             <p><b>Role:</b> Lecturer for Comp2013/2014 </p>
+             <p></p>
+             </div>
+             <div style="border-bottom: solid 1px silver; overflow: hidden;">
+             <h4><span style="font-weight: lighter">Leslie</span><img class="img-rounded" align="right" hspace="50" src="img/Leslie.png" ></h4>
+             <p><b>Role:</b> Supervisor </p>
+             <p></p>
+             </div>
+             <div style="border-bottom: solid 1px silver; overflow: hidden;">
+             <h4><span style="font-weight: lighter">Mobeen Ali</span></h4>
+             <p><b>Role:</b> Orange Labs contact </p>
+             <p></p>
+             </div>
+             <div style="border-bottom: solid 1px silver; overflow: hidden;">
+             <h4><span style="font-weight: lighter">Kashif Chaudhry</span></h4>
+             <p><b>Role:</b> Orange Labs contact </p>
+             <p></p>
+             </div>
+             <div style="border-bottom: solid 1px silver; overflow: hidden;">
+             <h4><span style="font-weight: lighter">Graeme McPhillips</span></h4>
+             <p><b>Role:</b> Hardware supervisor</p>
+             <p></p>
+             </div>
 
             <!-- Project Management -->
             <h2>Project Management</h2>
