--- a/dev.html
+++ b/dev.html
@@ -67,7 +67,7 @@
             <a class="anchor" id="team"></a>
             <hr>
             <div style="border-bottom: solid 1px silver; overflow: hidden;">
-            <img class="img-rounded" align="right" hspace="50" src="img/johan2.jpg" >
+            <img class="img-rounded" style="margin-left: 30px;" align="right"  src="img/johan2.jpg" >
              <h3>Primary Developers</h3>
              <h4><span style="font-weight: lighter">Johan Mouritsen</span></h4>
              <p><b>Main Role:</b> Hardware Lead  </p>
@@ -111,11 +111,24 @@
             <h2>Project Management</h2>
             <a class="anchor" id="management"></a>
             <hr>
-            <ul>
-              <li>How we've managed ourselves</li>
-              <li>List of who did what</li>
-              <li>If we're uploading the biweeklys, they should go here</li>
-            </ul>
+            <h3>Who did what</h3>
+            <p>Below is a table of the main tasks of our presentation:
+            <img src="img/ProjectManagement.png">
+            <p>Something to note is that each field does not always carry the same amount of work load. The fields simply act as a percentage guide.</p>
+            <p>As you can see, we split up the work quite equally. Gulliver worked the most on the System, Victoria on the Application and Johan on the Hardware. We did however have an overlap in each section of people providing support where possible.</p>
+            <h3>Bi-Weekly Reports</h3>
+            <h4>Term 1</h4>
+            <p><a href="img/biweekly1.pdf">Biweekly 1</a></p>
+            <p><a href="img/biweekly2.pdf">Biweekly 2</a></p>
+            <p><a href="img/biweekly3.pdf">Biweekly 3</a></p>
+            <p><a href="img/biweekly4.pdf">Biweekly 4</a></p>
+            <p><a href="img/biweekly5.pdf">Biweekly 5</a></p>
+            <h4>Term 2</h4>
+            <p><a href="img/biweekly6.pdf">Biweekly 6</a></p>
+            <p><a href="img/biweekly7.pdf">Biweekly 7</a></p>
+            <p><a href="img/biweekly8.pdf">Biweekly 8</a></p>
+            <p><a href="img/biweekly9.pdf">Biweekly 9</a></p>
+            <p><a href="img/biweekly10.pdf">Biweekly 10</a></p>
 
             <!-- Development Timeline -->
             
