--- a/dev.html
+++ b/dev.html
@@ -88,7 +88,7 @@
              <p></p>
              </div>
              <div style="border-bottom: solid 1px silver; overflow: hidden;">
-             <h4><span style="font-weight: lighter">Leslie</span><img class="img-rounded" align="right" hspace="50" src="img/Leslie.png" ></h4>
+             <h4><span style="font-weight: lighter">Leslie</span></h4>
              <p><b>Role:</b> Supervisor </p>
              <p></p>
              </div>
