--- a/dev.html
+++ b/dev.html
@@ -68,7 +68,7 @@
             <a class="anchor" id="team"></a>
             <hr>
             <div style="border-bottom: solid 1px silver; overflow: hidden;">
-			<img class="img-rounded" align="right" hspace="50" src="img/johan2.jpg" >
+            <img class="img-rounded" style="margin-left: 30px;" align="right"  src="img/johan2.jpg" >
              <h3>Primary Developers</h3> 
              <h4><span style="font-weight: lighter">Johan Mouritsen</span></h4>
              <p><b>Main Role:</b> Hardware Lead  </p>
