Final collab page

--- a/collab.html
+++ b/collab.html
@@ -37,7 +37,7 @@
     <div class="pageheader">
       <div class="container">
         <div>
-          <h1 style="color: #f60">Collaborate</h1>
+          <h1 style="color: #f60; font-size: 70px; padding-top: 48px">Collaborate</h1>
           <p class="pageblurb">Like what you see? We're running a number of open-source initiatives, and depend upon community developers to help us to grow. If you're looking for info on how to get involved, this is it.</p><br>
         </div>
       </div>
