--- a/dev.html
+++ b/dev.html
@@ -83,7 +83,7 @@
               <img class="img-rounded" style="margin: 12px; float: left; max-width: 184px" align="right"  src="img/johan2.jpg" >
              
              <h4><span style="font-weight: lighter">Johan Mouritsen</span></h4>
-             <p><b>Contact:</b> email@gmail.com</p>
+             <p><b>Contact:</b> zcabjmo@live.ucl.ac.uk</p>
              <p><b>Main Role:</b> Hardware Lead  </p>
              <p><b>Secondary Role:</b> Documentation and Testing</p>
              <p align="left"><b>Description:</b> I am a Danish Computer Science student at UCL, completing the 4 year MEng Computer Science program.
