--- a/demo.html
+++ b/demo.html
@@ -134,7 +134,7 @@
               <p>We used the Arduino in our system to act as our zone controller. 
               For the sake of demonstration, we had to handle global communication via a computer due to the service being down for the shield we were planning to use.
               We used the Arduino Mega along with a Arduino GSM shield:</p>
-              <p><img class="img-rounded"src="img/GSMShieldFront.jpg" > <img class="img-rounded" src="img/GSMShieldBack.JPG"></p>
+              <p><img class="img-rounded"src="img/GSMShieldFront.jpg" > <img class="img-rounded" src="img/GSMShieldBack.jpg"></p>
               <p>In a real life implementation of this project, it is recommended to use something smaller than the Arduino, as it draws unnecessary amounts of power.
               The best thing to do would be to attach a GSM shield directly to your sensor unit, instead of using the Arduino as a medium. For the sake of simplicity we chose to use Arduino.</p>
               <p>For more information on Arduino, refer to their website: <a href="http://www.arduino.cc">www.arduino.cc</a></p>
